--- a/package.json
+++ b/package.json
@@ -3,12 +3,15 @@
   "homepage": "http://yixiann.github.io/lifehack",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://127.0.0.1:8000/",
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.6",
+    "axios": "^0.21.1",
+    "bootstrap": "^3.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.2.0",
