--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "lifehack",
-  "homepage": "http://yixiann.github.io/login",
+  "homepage": "/login",
   "version": "0.1.0",
   "private": true,
   "proxy": "http://127.0.0.1:8000/",
