--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ backend/lifehack/migrations/__pycache__/__init__.cpython-39.pyc
 backend/lifehack/migrations/__pycache__/0001_initial.cpython-39.pyc
 backend/lifehack/migrations/__pycache__/0002_chat.cpython-39.pyc
 backend/lifehack/migrations/__pycache__/0003_chat_attachments.cpython-39.pyc
+backend/db.sqlite3
+backend/lifehack/__pycache__/models.cpython-39.pyc
