--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@testing-library/user-event": "^12.1.10",
     "antd": "^4.16.6",
     "axios": "^0.21.1",
+    "bizcharts": "^4.1.11",
     "bootstrap": "^3.4.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
